--- a/src/css/style.css
+++ b/src/css/style.css
@@ -13,6 +13,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;  
+    margin: 20px;
     margin-top: 50px;
 }
 
@@ -26,7 +27,7 @@ body{
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    height: 75%;
+    height: 70vh;
     font-size: 40px;
     padding: 20px;
     margin: 40px 10px; 
