--- a/src/css/style.css
+++ b/src/css/style.css
@@ -13,8 +13,8 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;  
-    margin: 20px;
     margin-top: 50px;
+    margin-bottom: 50px;
 }
 
 .the-bank-icon{
@@ -27,7 +27,7 @@ body{
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    height: 70vh;
+    gap: 50px;
     font-size: 40px;
     padding: 20px;
     margin: 40px 10px; 
